# Optimal-MIS

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Example/: CMakeLists.txt  Example.cpp  Spectrum.h  TestCompilationExample.cpp
src/: BalanceEstimator.h  CutOffEstimator.h  DirectEstimator.h  Estimator.h  Estimators.h  ImageBalanceEstimator.h  ImageDirectEstimator.h  ImageEstimator.h  ImageEstimators.h  ImageSimpleEstimator.h  MaximumEstimator.h  NaiveEstimator.h  Parallel.h  PowerEstimator.h  SimpleEstimator.h  debug.h
src/MIS/: AlphaEstimator.h  BalanceEstimator.h  CutOffEstimator.h  DirectCommons.h  DirectEstimator.h  Estimator.h  Estimators.h  Heuristics.h  ImageBalanceEstimator.h  ImageCutOffEstimator.h  ImageDirectEstimator.h  ImageEstimator.h  ImageEstimators.h  ImageMaximumEstimator.h  ImageNaiveEstimator.h  ImagePowerEstimator.h  ImageSimpleEstimator.h  MaximumEstimator.h  NaiveEstimator.h  PowerEstimator.h  ProgressiveEstimator.h  SimpleEstimator.h
src/MIS/utils/: Parallel.h  SpectrumWrapper.h  settings.h
src/utils/: Parallel.h  settings.h
